Address PR feedback. Revert `ExprCollectionValue` and `ExprTupleValue` comparison.
Signed-off-by: Yury-Fridlyand <yuryf@bitquilltech.com>